--- a/test/.harness/test.yaml
+++ b/test/.harness/test.yaml
@@ -31,5 +31,8 @@ pipeline:
                                     environmentVariables: []
                                     outputVariables: []
                                     executionTarget: {}
+                                    delegateSelectors:
+                                        - test-ng
                                 timeout: 10m
+                                failureStrategies: []
               tags: {}
