Update pipeline test

--- a/test/.harness/test.yaml
+++ b/test/.harness/test.yaml
@@ -28,6 +28,9 @@ pipeline:
                                             script: |-
                                                 echo "Hi"
                                                 date
+                                                echo <+variable.account.examplevariables>
+                                                echo <+variable.org.examplevariablesorg>
+                                                echo <+variable.examplevariablesproject>
                                     environmentVariables: []
                                     outputVariables: []
                                     executionTarget: {}
@@ -35,19 +38,4 @@ pipeline:
                                         - test-ng
                                 timeout: 10m
                                 failureStrategies: []
-                          - step:
-                                type: ShellScript
-                                name: test-1
-                                identifier: test1
-                                spec:
-                                    shell: Bash
-                                    onDelegate: true
-                                    source:
-                                        type: Inline
-                                        spec:
-                                            script: echo "test"
-                                    environmentVariables: []
-                                    outputVariables: []
-                                    executionTarget: {}
-                                timeout: 10m
               tags: {}
