--- a/test/.harness/test.yaml
+++ b/test/.harness/test.yaml
@@ -30,7 +30,7 @@ pipeline:
                                                 echo <+variable.account.examplevariables>
                                                 echo <+variable.org.examplevariablesorg>
                                                 echo <+variable.examplevariablesproject>
-                                                echo <+pipeline.stages.stage.name>
+                                                echo <+pipeline.stages.stage.type>
                                     environmentVariables: []
                                     outputVariables: []
                                     executionTarget: {}
