--- a/test/.harness/test.yaml
+++ b/test/.harness/test.yaml
@@ -31,6 +31,7 @@ pipeline:
                                                 echo <+variable.org.examplevariablesorg>
                                                 echo <+variable.examplevariablesproject>
                                                 echo <+pipeline.stages.test.name>
+                                                echo <+pipeline.stages.test.step.test.spec.shell>
                                     environmentVariables: []
                                     outputVariables: []
                                     executionTarget: {}
