Update pipeline test

--- a/test/.harness/test.yaml
+++ b/test/.harness/test.yaml
@@ -25,13 +25,12 @@ pipeline:
                                     source:
                                         type: Inline
                                         spec:
-                                            script: |-
+                                            script: |
                                                 date
                                                 echo <+variable.account.examplevariables>
                                                 echo <+variable.org.examplevariablesorg>
                                                 echo <+variable.examplevariablesproject>
                                                 echo <+pipeline.stages.test.name>
-                                                echo <+pipeline.stages.test.spec.execution.steps.test.spec.source.spec.script>
                                     environmentVariables: []
                                     outputVariables: []
                                     executionTarget: {}
